# gtk-wgpu-area

./: .gitignore  Cargo.toml  README.md  meson.build
build-aux/: com.github.flxzt.gtkwgpuarea.json
src/: main.rs  wgpuarea.rs
