[package]
edition = "2021"
name = "gtkwgpuarea"
version = "0.1.0"

[dependencies]
epoxy = "0.1"
# use the same version as wgpu-hal
glow = "0.16.0"
gtk4 = { version = "0.9.6", features = ["v4_14"] }
libloading = "0.8.6"

wgpu-hal = { git = "https://github.com/gfx-rs/wgpu", version = "25.0.0" }
wgpu-types = { version = "25.0.0", git = "https://github.com/gfx-rs/wgpu" }

# for mac os, we need the angle feature
[target.'cfg(any(target_os = "macos"))'.dependencies]
wgpu = { version = "25.0.0", git = "https://github.com/gfx-rs/wgpu", features = [
    "angle",
] }

[target.'cfg(not(any(target_os = "macos")))'.dependencies]
wgpu = { version = "25.0.0", git = "https://github.com/gfx-rs/wgpu" }

